// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fermentable docs should match snapshot 1`] = `
"The schema defines the following types:

## FermentableBase 

FermentableBase provides unique properties to identify individual records of fermentable ingredients

\`FermentableBase\` type: \`object\`

### Properties

|   |Type|Description|Required|
|---|----|-----------|--------|
| **name** | string|  | :white_check_mark: |
| **type** |  'dry extract'  , 'extract'  , 'grain'  , 'sugar'  , 'fruit'  , 'juice'  , 'honey'  , 'other' |  | :white_check_mark: |
| **color** | [ColorType](measureable_units.json.md#colortype)|  |  |
| **origin** | string|  |  |
| **supplier** | string|  |  |
| **grain_group** |  'base'  , 'caramel'  , 'flaked'  , 'roasted'  , 'specialty'  , 'smoked'  , 'adjunct' |  |  |

## FermentableType 

FermentableType collects the attributes of a fermentable ingredient to store as record information

\`FermentableType\` type: \`object\`

Parent: [FermentableBase](#fermentablebase)

### Properties

|   |Type|Description|Required|
|---|----|-----------|--------|
| **yield** | object|  | :white_check_mark: |
| **notes** | string|  |  |
| **moisture** | [PercentType](measureable_units.json.md#percenttype)|  |  |
| **alpha_amylase** | number|  |  |
| **diastatic_power** | number|  |  |
| **protein** | [PercentType](measureable_units.json.md#percenttype)|  |  |
| **soluble_nitrogen_ratio** | number|  |  |
| **max_in_batch** | [PercentType](measureable_units.json.md#percenttype)|  |  |
| **recommend_mash** | boolean|  |  |
| **ibu_gal_per_lb** | number|  |  |
| **color** | [ColorType](measureable_units.json.md#colortype)|  | :white_check_mark: |
| **inventory** | object|  |  |

## FermentableAdditionType 

FermentableAdditionType collects the attributes of each fermentable ingredient for use in a recipe fermentable bill

\`FermentableAdditionType\` type: \`object\`

Parent: [FermentableBase](#fermentablebase)

### Properties

|   |Type|Description|Required|
|---|----|-----------|--------|
| **amount** | undefined|  |  |

"
`;

exports[`formatTypeDefinition 1`] = `
"## FermentableBase 

FermentableBase provides unique properties to identify individual records of fermentable ingredients

\`FermentableBase\` type: \`object\`

### Properties

|   |Type|Description|Required|
|---|----|-----------|--------|
| **name** | string|  | :white_check_mark: |
| **type** |  'dry extract'  , 'extract'  , 'grain'  , 'sugar'  , 'fruit'  , 'juice'  , 'honey'  , 'other' |  | :white_check_mark: |
| **color** | [ColorType](measureable_units.json.md#colortype)|  |  |
| **origin** | string|  |  |
| **supplier** | string|  |  |
| **grain_group** |  'base'  , 'caramel'  , 'flaked'  , 'roasted'  , 'specialty'  , 'smoked'  , 'adjunct' |  |  |

"
`;
